--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -1,6 +1,9 @@
 name: Destroy Infrastructure
 
 on:
+  push:
+    branches:
+      - self-hosted
   workflow_dispatch:
 
 jobs:
@@ -43,6 +46,8 @@ jobs:
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
       run: |
+        set -e
+
         cat <<EOF > terraform.tfvars.json
         {
           "my_user_object_id": "$USER_OBJECT_ID",
@@ -52,8 +57,21 @@ jobs:
 
         echo "Verifying kubectl access"
         kubectl get ns -A
-        
-        terraform destroy -target=azurerm_kubernetes_cluster.time_api_cluster --auto-approve
+
+        echo "Attempting to destroy AKS cluster (max 3 attempts)..."
+        for destroy in {1..3}: do
+          echo "Attempt $destroy..."
+          terraform destroy -target=azurerm_kubernetes_cluster.time_api_cluster --auto-approve && break || {
+            echo "Terraform destroy failed (attempt $destroy)."
+            if [ "$destroy" -lt 3 ]; then
+              echo "Retrying in 10 seconds..."
+              sleep 10\
+            else
+              echo "All attempts failed."
+              exit 1
+            fi
+          }
+        done
       working-directory: ./terraform
     
   destroy-runner-vm:
