--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -59,15 +59,15 @@ jobs:
         kubectl get ns -A
 
         echo "Attempting to destroy AKS cluster (max 3 attempts)..."
-        for destroy in {1..3}: do
+        for destroy in {1..3}; do
           echo "Attempt $destroy..."
           terraform destroy -target=azurerm_kubernetes_cluster.time_api_cluster --auto-approve && break || {
             echo "Terraform destroy failed (attempt $destroy)."
             if [ "$destroy" -lt 3 ]; then
               echo "Retrying in 10 seconds..."
-              sleep 10\
+              sleep 10
             else
-              echo "All attempts failed."
+              echo "All attempts failed..."
               exit 1
             fi
           }
